--- a/sass/layout/_slogan.scss
+++ b/sass/layout/_slogan.scss
@@ -1,17 +1,26 @@
   .slogan {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
   .slogan__list {
-  display: flex;
-  margin-left: -30px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -30px;
+      margin-top: -30px;
+     }
   }
   .slogan__item {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-left: 30px;
+    @media screen and (min-width: 768px) {
+      display: block;
+      width: calc(100% / 2 - 30px);
+      margin-left: 30px;
+      margin-top: 30px;
+     }
   }
   .slogan__pic {
-    width: 270px;
+    // width: 270px;
+    max-width: 450px;
     height: 120px;
     background: #F5F4FA;
     border-radius: 4px;
@@ -19,21 +28,33 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+    }
   }
   .slogan__title {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--header-color);
+    max-width: 450px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--header-color);
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+    }
   }
   .slogan__text {
-    max-width: 270px;
+    // max-width: 270px;
+    max-width: 480px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--text-color);
+    @media screen and (min-width: 768px) {
+      max-width: 354px;
+    }
   }
