--- a/sass/layout/_slogan.scss
+++ b/sass/layout/_slogan.scss
@@ -1,6 +1,9 @@
   .slogan {
     padding-top: 60px;
     padding-bottom: 60px;
+    @media screen and (min-width: 768px) {
+      width: 768px;
+     }
   }
   .slogan__list {
     @media screen and (min-width: 768px) {
