--- a/sass/layout/_slogan.scss
+++ b/sass/layout/_slogan.scss
@@ -1,9 +1,10 @@
   .slogan {
     padding-top: 60px;
     padding-bottom: 60px;
-    @media screen and (min-width: 768px) {
-      width: 768px;
-     }
+     @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
   }
   .slogan__list {
     @media screen and (min-width: 768px) {
@@ -12,6 +13,10 @@
       margin-left: -30px;
       margin-top: -30px;
      }
+     @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-left: -30px;
+    }
   }
   .slogan__item {
     @media screen and (min-width: 768px) {
@@ -20,9 +25,12 @@
       margin-left: 30px;
       margin-top: 30px;
      }
+     @media screen and (min-width: 1200px) {
+      flex-basis: calc(100% / 4 - 30px);
+      margin-left: 30px;
+    }
   }
   .slogan__pic {
-    // width: 270px;
     max-width: 450px;
     height: 120px;
     background: #F5F4FA;
@@ -33,6 +41,9 @@
     justify-content: center;
     @media screen and (min-width: 768px) {
       max-width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+     width: 270px;
     }
   }
   .slogan__title {
@@ -47,10 +58,13 @@
     color: var(--header-color);
     @media screen and (min-width: 768px) {
       max-width: 354px;
+      text-align: left;
+    }
+    @media screen and (min-width: 1200px) {
+      text-align: center;
     }
   }
   .slogan__text {
-    // max-width: 270px;
     max-width: 480px;
     font-weight: 400;
     font-size: 14px;
@@ -59,5 +73,8 @@
     color: var(--text-color);
     @media screen and (min-width: 768px) {
       max-width: 354px;
+    }
+    @media screen and (min-width: 1200px) {
+      max-width: 270px;
     }
   }
