--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,27 +1,56 @@
   .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
   }
   .clients-title {
-    margin-bottom: 50px;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 28px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--header-color);
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.16;
+      margin-bottom: 50px;
+    }
   }
   .clients-list {
     display: flex;
     margin-left: -30px;
+    flex-wrap: wrap;
+    @media screen and (min-width: 320px) {
+     justify-content: center;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-top: -30px;
+    }
   }
   .clients-item {
-    flex-basis: calc(100% / 6 - 30px);
+    flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
+    margin-top: 30px;
+    @media screen and (min-width: 768px) {
+      flex-basis: calc(100% / 3 - 30px);
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc(100% / 6 - 30px);
+    }
   }
   .clients-link {
-    width: 170px;
+    width: 210px;
     height: 92px;
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
     background-color: #ffffff;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
