--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,34 +1,90 @@
   .conteiner__hero {
-    width: 1600px;
+    width: 480px;
+    height: 400px;
     margin: 0 auto; 
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      height: 400px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 1600px;
+      height: 600px;
+  }
   }
   .hero__content {
     background: #C4C4C4;
-    width: 1600px;
-    height: 600px;
+    width: 480px;
+    height: 400px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
      rgba(47, 48, 58, 0.4)),
-    url(../images/Img\ hero.jpg);
+    url(../images/hero/Header-img-mob-1x.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+          background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+            url(../images/hero/Header-img-mob-2x.jpg);
+        }
+
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      height: 400px;
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
+     url(../images/hero/Header-img-tab-1x.jpg);
+    }
+     @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+          background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+           rgba(47, 48, 58, 0.4)),
+            url(../images/hero/Header-img-tab-2x.jpg);
+      }
+    
+    @media screen and (min-width: 1200px) {
+      width: 1600px;
+      height: 600px;
+      padding-top: 200px;
+      padding-bottom: 200px;
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)),
+     url(../images/hero/Header-img-1x.jpg);
+    }
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+         rgba(47, 48, 58, 0.4)),
+          url(../images/hero/Header-img-2x.jpg);
+    }
+
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     display:flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
   }
   .hero__title {
-  max-width: 650px;
+  max-width: 360px;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
+  letter-spacing: 0.06em;
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
+     @media screen and (min-width: 1200px) {
+      max-width: 650px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
   .hero__btn{
     font-family: inherit;
