--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/aside";
+@import "./layout/mob-menu";
 ///////////////////////////
 @import "./layout/portfolio/filters";
 @import "./layout/portfolio/progect";
