--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,28 +1,64 @@
   .header {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     border-bottom: 1px solid #ECECEC;
-    .conteiner {
+
+    @media screen and (min-width: 768px) {
+      padding-top: 26px;
+      padding-bottom: 26px;
+      .conteiner {
+        display: flex;
+        align-items: center;
+      }
+      }
+     @media screen and (min-width: 1200px) {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      }
+  }
+    .menu-open {
+      background-color: transparent;
+      display: block;
+      border: none;
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
+    }
+    .menu-icon {
+
+    }
+    .header-mob {
       display: flex;
+      justify-content: space-between;
       align-items: center;
     }
-  }
+    
   .logo{
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height:1.19;
+  font-size: 24px;
+  line-height:1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  margin-right: 93px;
+  margin-right: 88px;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
   }
   .logo--color-black {
     color: #000000;
   }
   .navigation__list {
-    display: flex;  
+    display: flex;
+    margin-right: 80px;  
   }
-
+  .navigation {
+    @media screen and (max-width: 767px) {
+    display: none;
+    }
+  }
   .navigation__link {
   font-weight: 500;
   font-size: 14px;
@@ -54,24 +90,37 @@
     color: var(--accent-color);
   }
   .connect {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
     align-items: baseline;
     margin-left: auto;
+  }
     }
   .connect__mail, .connect__tel {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--text-color);
-  margin-left: 30px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
+    margin-left: 30px;
+    }
   &:hover, &:focus,
   &:hover, &:focus{
     color: var(--accent-color);
   }
   }
   .connect__icon {
-  margin-right: 10px;
-  fill: currentColor;
+    margin-right: 8px;
+    fill: currentColor;
+      @media screen and (min-width: 1200px) {
+        margin-right: 10px;
+    }
   }
+  
