--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     padding-top: 16px;
     padding-bottom: 16px;
     border-bottom: 1px solid #ECECEC;
-
+    
     @media screen and (min-width: 768px) {
       padding-top: 26px;
       padding-bottom: 26px;
@@ -14,7 +14,8 @@
      @media screen and (min-width: 1200px) {
       padding-top: 32px;
       padding-bottom: 32px;
-      }
+      
+  }
   }
     .menu-open {
       background-color: transparent;
@@ -32,20 +33,22 @@
       justify-content: space-between;
       align-items: center;
     }
-    
+
   .logo{
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  line-height:1.16;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
-  margin-right: 88px;
-  @media screen and (min-width: 1200px) {
-    font-size: 26px;
-    line-height: 1.19;
-    margin-right: 93px;
-  }
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    line-height:1.16;
+    letter-spacing: 0.03em;
+    color: var(--accent-color);
+    @media screen and (min-width: 768px) {
+    margin-right: 88px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 26px;
+      line-height: 1.19;
+      margin-right: 93px;
+    }
   }
   .logo--color-black {
     color: #000000;
@@ -123,4 +126,6 @@
         margin-right: 10px;
     }
   }
-  
+  .no-scroll {
+    overflow: hidden;
+  }
