--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,11 @@ body {
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  margin-right: 88px;
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 88px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .logo {
@@ -460,6 +464,10 @@ body {
   .connect__icon {
     margin-right: 10px;
   }
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .conteiner__hero {
@@ -953,9 +961,56 @@ body {
   padding-bottom: 60px;
   background-color: #2F303A;
 }
+@media screen and (min-width: 480px) {
+  .footer .conteiner {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer .conteiner {
+    width: 1200px;
+  }
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .footer-logo {
+    font-size: 26px;
+    line-height: 1.19;
+    margin-right: 93px;
+  }
+}
 
 .logo--color-white {
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tab {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .footer-address {
@@ -966,6 +1021,25 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .footer-address {
+    margin-left: 76px;
+    margin-right: 165px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer-address {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-address {
+    margin: 0;
+  }
 }
 
 .footer-text {
@@ -991,17 +1065,8 @@ body {
   color: var(--accent-color);
 }
 
-.footer-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .footer-soc {
-  margin-top: 12px;
-  margin-left: 70px;
-  width: 206px;
-  height: 80px;
+  margin-bottom: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1009,6 +1074,17 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    width: 206px;
+    height: 80px;
+    margin-top: 12px;
+    margin-left: 70px;
+  }
 }
 
 .footer-soc-title {
@@ -1044,8 +1120,42 @@ body {
   fill: #ffffff;
 }
 
-.footer-aside {
-  margin-left: 93px;
+@media screen and (max-width: 1199px) {
+  .footer-aside {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-aside {
+    margin-left: 93px;
+  }
+}
+
+.aside-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 1199px) {
+  .aside-box {
+    width: 450px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .footer-aside-text {
@@ -1060,8 +1170,9 @@ body {
 }
 
 .footer-aside-mail {
+  margin-bottom: 20px;
   padding-left: 16px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   font-weight: 400;
   font-size: 16px;
@@ -1075,6 +1186,11 @@ body {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+}
+@media screen and (min-width: 1200px) {
+  .footer-aside-mail {
+    width: 358px;
+  }
 }
 
 .footer-aside-btn {
@@ -1112,12 +1228,6 @@ body {
   height: 24px;
   margin-left: 10px;
   background-image: url(../images/icon\ send.svg);
-}
-
-.aside-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .aside {
@@ -1176,6 +1286,99 @@ body {
   background-color: #ffffff;
   width: 100vw;
   height: 100vh;
+}
+.mob-menu .conteiner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: auto;
+}
+@media screen and (min-width: 480px) {
+  .mob-menu .conteiner {
+    width: 480px;
+  }
+}
+
+.menu-close {
+  margin-left: auto;
+  margin-right: 15px;
+  margin-top: 10px;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-nav__item {
+  margin-bottom: 32px;
+}
+
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: var(--header-color);
+}
+
+.mob-menu-tel {
+  display: block;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mob-menu-mail {
+  display: block;
+  margin-bottom: 64px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-soc-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 48px;
+}
+
+.mob-soc-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-soc-link {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .filters {
