--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,13 +2,59 @@
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #2F303A;
+    .conteiner {
+      @media screen and (min-width: 480px) {
+          width: 480px;
+        }
+      
+      @media screen and (min-width: 768px){
+          width: 768px;
+      }
+      @media screen and (min-width: 1200px){
+        width: 1200px;
+      }
+    }
+  }
+  .footer-logo {
+      font-family: 'Raleway', sans-serif;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 1.16;
+      letter-spacing: 0.03em;
+      color: var(--accent-color);
+      @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.19;
+        margin-right: 93px;
+      }
   }
   .logo--color-white {
     color: #ffffff;
   }
+  .footer-list {
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
+  }
+  .footer-tab {
+    @media screen and (min-width: 768px) {
+      display: flex;
+    }
+  }
   .footer-address {
     display: flex;
     flex-direction: column;
+    @media screen and (min-width: 768px) {
+      margin-left: 76px;
+      margin-right: 165px;
+    }
+    @media screen and (max-width: 1199px) {
+    align-items: center;
+    margin-bottom: 60px;
+    }
+    @media screen and (min-width: 1200px) {
+     margin: 0;
+    }
   }
   .footer-text{
     margin-top: 20px;
@@ -32,16 +78,17 @@
     }
   }
 
-  .footer-list {
-  display: flex;
-  }
   .footer-soc {
-  margin-top: 12px;
-  margin-left: 70px;
-  width: 206px;
-  height: 80px;
-  display: flex;
-  flex-direction: column;
+    margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (min-width: 1200px) {
+      width: 206px;
+      height: 80px;
+      margin-top: 12px;
+      margin-left: 70px;
+    }
   }
   .footer-soc-title {
     margin-bottom: 20px;
@@ -69,8 +116,23 @@
   }
 
   .footer-aside {
+    @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+    @media screen and (min-width: 1200px) {
     margin-left: 93px;
+    }
   }
+    .aside-box {
+      display: flex;
+      @media screen and (max-width: 1199px) {
+        width: 450px;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
   .footer-aside-text {
     margin-top: 12px;
     margin-bottom: 20px;
@@ -82,8 +144,9 @@
     color: #FFFFFF;
   }
   .footer-aside-mail {
+    margin-bottom: 20px;
     padding-left: 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     font-weight: 400;
     font-size: 16px;
@@ -95,6 +158,9 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
   }
   .footer-aside-btn {
     display: flex;
@@ -124,6 +190,4 @@
       background-image: url(../images/icon\ send.svg);
     }
   }
-  .aside-box {
-    display: flex;
-  }
+  
