--- a/sass/layout/_mob-menu.scss
+++ b/sass/layout/_mob-menu.scss
@@ -4,32 +4,91 @@
  background-color: #ffffff;
  width: 100vw;
  height: 100vh;
+ .conteiner {
+     display: flex;
+     height: 100%;
+     flex-direction: column;
+     justify-content: space-between;
+     overflow: auto;
+    @media screen and (min-width: 480px) {
+            width: 480px;
+        }
+ }
 }
 
-.menu-close {}
-
-.button {}
+.menu-close {
+    margin-left: auto;
+    margin-right: 15px;
+    margin-top: 10px;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .modal-close {}
 
-.bob-menu-nav {}
+.mob-menu-nav {
 
-.bob-menu-nav__list {}
+}
 
-.bob-menu-nav__item {}
+.mob-menu-nav__list {}
 
-.navigation__link {}
+.mob-menu-nav__item {
+    margin-bottom: 32px;
+}
+
+.mob-menu-link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    color: var(--header-color);
+}
 
 .bottom__active {}
 
 .mob-menu-cont {}
 
-.connect__mail {}
 
-.connect__tel {}
 
-.mob-soc-list {}
+.mob-menu-tel {
+    display: block;
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+}
+.mob-menu-mail {
+    display: block;
+    margin-bottom: 64px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
+.mob-soc-list {
+    display: flex;
+    margin-bottom: 48px;
+}
 
-.mob-soc-item {}
+.mob-soc-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2); ;
+}
 
-.mob-soc-link {}
+.mob-soc-link {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+}
