--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,11 +3,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) translateX(0%);
-    width: 528px;
-    min-height: 581px;
+    width: 450px;
+    min-height: 609px;
     background-color: #ffffff;
     border-radius: 4px;
     transition: transform 500ms;
+    @media screen and (min-width: 1200px) {
+      width: 528px;
+      min-height: 581px;
+    }
   }
   .modal-close {
     fill: #000000;
@@ -37,10 +41,13 @@
     padding: 40px 40px 12px 40px;
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
+    @media screen and (min-width: 1200px) {
+      line-height: 1.15;
+    }
   }
   .modal-form {
     padding-left: 40px;
@@ -91,7 +98,7 @@
   }
   .modal-user-text {
     padding: 12px 16px;
-    width: 448px;
+    width: 100%;
     height: 120px;
     font-weight: 400;
     font-size: 12px;
@@ -108,18 +115,25 @@
     }
   }
   .modal-field-check {
+    padding-left: 30px;
+   
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     margin-bottom: 30px;
   }
   .modal-check-text {
     display: flex;
     align-items: center;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     color: var(--text-color);
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.71;
+    }
     &::before {
       content: "";
       width: 16px;
@@ -140,12 +154,16 @@
   } 
   .modal-more {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: var(--accent-color);
-    margin-left: 5px;
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.71;
+      margin-left: 5px;
+    }
   }
   .modal-btn {
     display: flex;
@@ -153,6 +171,7 @@
   }
   .modal-button {
     font-family: inherit;
+    margin-bottom: 40px;
     min-width: 200px;
     height: 50px;
     font-weight: 700;
