--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,8 +25,11 @@
         display: none;
       }
     }
-    .menu-icon {
-
+    .menu-icon-open {
+      fill: #000000;
+      &:hover, &:focus {
+        fill: var(--accent-color);
+      }
     }
     .header-mob {
       display: flex;
