--- a/sass/layout/_mob-menu.scss
+++ b/sass/layout/_mob-menu.scss
@@ -15,7 +15,12 @@
         }
  }
 }
-
+.mob-menu-top {
+    padding-left: 40px;
+}
+.mob-menu-bottom {
+    padding-left: 40px;
+}
 .menu-close {
     margin-left: auto;
     margin-right: 15px;
@@ -28,16 +33,10 @@
     align-items: center;
     justify-content: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+        fill: var(--accent-color);
+    }
 }
-
-.modal-close {}
-
-.mob-menu-nav {
-
-}
-
-.mob-menu-nav__list {}
-
 .mob-menu-nav__item {
     margin-bottom: 32px;
 }
@@ -48,14 +47,13 @@
     line-height: 47px;
     letter-spacing: 0.02em;
     color: var(--header-color);
+    &:hover, &:focus {
+            color: var(--accent-color);
+        }
 }
-
-.bottom__active {}
-
-.mob-menu-cont {}
-
-
-
+.link-active {
+    color: var(--accent-color);
+}
 .mob-menu-tel {
     display: block;
     margin-bottom: 32px;
@@ -78,13 +76,13 @@
     display: flex;
     margin-bottom: 48px;
 }
-
-.mob-soc-item:not(:last-child) {
-    border-right: 1px solid rgba(33, 33, 33, 0.2); ;
-}
-
-.mob-soc-link {
+.mob-soc-item:not(:first-child) {
     margin-left: 10px;
+}
+.mob-soc-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2); 
+}
+.mob-soc-link {
     margin-right: 10px;
     font-weight: 500;
     font-size: 18px;
