--- a/sass/layout/portfolio/_progect.scss
+++ b/sass/layout/portfolio/_progect.scss
@@ -1,18 +1,36 @@
 .progect-list {
+    
+    @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-bottom: -30px;
+    }
+    @media screen and (min-width: 1200px) {
+    margin-left: -30px;
+    margin-bottom: -30px;
+    }
 }
 .progect-item {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-    margin-bottom: 30px;
+     &:not(:last-child) {
+         margin-bottom: 30px;
+     }
     &:hover {
         background: #FFFFFF;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+    @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-top: 0;
+    margin-left: 30px;
+    margin-bottom: 30px;
     }
 }
 .progect-cover {
