--- a/css/main.css
+++ b/css/main.css
@@ -1445,7 +1445,7 @@ body {
 @media screen and (min-width: 768px) {
   .filters {
     padding-bottom: 30px;
-    padding-bottom: 90px;
+    padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1462,12 +1462,16 @@ body {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
     max-width: 100%;
+    height: 91px;
     margin-bottom: 40px;
   }
 }
 @media screen and (min-width: 768px) {
   .filtrrs-list {
+    height: 38px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1501,6 +1505,8 @@ body {
   display: inline-block;
   padding: 6px 22px;
   min-width: 73;
+  height: 38px;
+  padding-bottom: 20px;
   border-radius: 4px;
   border: 1px solid transparent;
   font-family: "Roboto", sans-serif;
