--- a/sass/layout/portfolio/_filters.scss
+++ b/sass/layout/portfolio/_filters.scss
@@ -3,7 +3,7 @@
     padding-bottom: 60px;
     @media screen and (min-width: 768px) {
     padding-bottom: 30px;
-    padding-bottom: 90px;
+    padding-bottom: 60px;
     }
     @media screen and (min-width: 1200px) {
     padding-top: 94px;
@@ -14,10 +14,13 @@
     @media screen and (min-width: 320px) {
     display: flex;
     flex-wrap: wrap;
+    align-content: space-between;
     max-width: 100%;
+    height: 91px;
     margin-bottom: 40px;
     }
     @media screen and (min-width: 768px) {
+    height: 38px;
     display: flex;
     justify-content: center;
     width: 738px;
@@ -40,6 +43,8 @@
        display: inline-block;
        padding: 6px 22px;
        min-width: 73;
+       height: 38px;
+       padding-bottom: 20px;
        border-radius: 4px;
        border: 1px solid transparent ;
    
