--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,18 +2,19 @@
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #2F303A;
-    .conteiner {
+  }
+  .conteiner {
       @media screen and (min-width: 480px) {
-          width: 480px;
-        }
-      
-      @media screen and (min-width: 768px){
-          width: 768px;
+        min-width: 320px;
       }
-      @media screen and (min-width: 1200px){
+  
+      @media screen and (min-width: 768px) {
+        width: 768px;
+      }
+  
+      @media screen and (min-width: 1200px) {
         width: 1200px;
       }
-    }
   }
   .footer-logo {
       font-family: 'Raleway', sans-serif;
@@ -143,6 +144,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
   }
+  
   .footer-aside-mail {
     margin-bottom: 20px;
     padding-left: 16px;
