--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -181,6 +181,7 @@
     color: #ffffff;
     background: var(--accent-color);
     border-radius: 4px;
+    border: none;
     &:hover, &:focus {
       color: #ffffff;
       background-color: var(--accent-color);
