--- a/sass/layout/_command.scss
+++ b/sass/layout/_command.scss
@@ -20,6 +20,11 @@
     }
   }
   .command-item {
+    @media screen and (max-width: 767px) {
+     &:not(:last-child) {
+       margin-bottom: 30px;
+     }
+    }
     @media screen and (min-width: 768px) {
       flex-basis: calc(100% / 2 - 30px);
       margin-left: 30px;
