--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -12,8 +12,9 @@
     padding: 0;
   }
   img {
-    width: 100%;
     display: block;
+    max-width: 100%;
+    height: auto;
   }
   .button {
     cursor: pointer;
