--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -98,6 +98,7 @@
     min-width: 200px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover, 
     &:focus {
