--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -7,7 +7,7 @@
       height: 400px;
     }
     @media screen and (min-width: 1200px) {
-      width: 1600px;
+      min-width: 1600px;
       height: 600px;
     }
   }
@@ -43,7 +43,7 @@
       }
     
     @media screen and (min-width: 1200px) {
-      width: 1600px;
+      min-width: 1600px;
       height: 600px;
       padding-top: 200px;
       padding-bottom: 200px;
